--- a/index.html
+++ b/index.html
@@ -4,32 +4,140 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Enterprise Capability Portfolio</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;700;800&family=DM+Serif+Display:ital@0;1&display=swap" rel="stylesheet">
   <style>
-    :root{--bg:#0b1020;--panel:#131a2e;--text:#e9eefb;--muted:#9fb0d4;--accent:#7aa2ff;--chip:#1d2848}
-    *{box-sizing:border-box} body{margin:0;font-family:Inter,Segoe UI,Arial,sans-serif;background:linear-gradient(180deg,#0b1020,#0e1530);color:var(--text)}
-    .wrap{max-width:1100px;margin:0 auto;padding:32px 20px 56px}
-    h1{font-size:clamp(28px,4vw,44px);margin:0 0 10px} p{color:var(--muted);line-height:1.5}
-    .hero{background:rgba(19,26,46,.75);border:1px solid #253258;border-radius:18px;padding:28px;backdrop-filter:blur(6px)}
-    .stats{display:flex;gap:12px;flex-wrap:wrap;margin-top:18px}.stat{background:var(--chip);padding:10px 14px;border-radius:999px;color:#c9d6fb;font-size:13px}
-    h2{margin:36px 0 14px;font-size:24px}
-    .grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(260px,1fr));gap:14px}
-    .card{background:var(--panel);border:1px solid #253258;border-radius:14px;padding:16px;display:flex;flex-direction:column;gap:10px}
-    .card h3{margin:0;font-size:18px}
-    .value{color:#dbe5ff;font-weight:600}
-    ul{margin:0;padding-left:18px;color:var(--muted)}
-    .tags{display:flex;flex-wrap:wrap;gap:8px}.tag{background:var(--chip);color:#bfd0ff;font-size:12px;padding:5px 9px;border-radius:999px}
-    a{color:var(--accent);text-decoration:none} a:hover{text-decoration:underline}
+    :root{
+      --bg:#090e1c;
+      --panel:#101833;
+      --panel-2:#172447;
+      --text:#eaf0ff;
+      --muted:#9aacd6;
+      --accent:#6fe3ff;
+      --accent-2:#9e8bff;
+      --line:#2a3868;
+      --ok:#86ffcf;
+    }
+    *{box-sizing:border-box}
+    body{
+      margin:0;
+      font-family:'Manrope',system-ui,sans-serif;
+      color:var(--text);
+      background:
+        radial-gradient(circle at 15% 10%, #1b2f6e66, transparent 35%),
+        radial-gradient(circle at 90% 15%, #3e2d7d55, transparent 28%),
+        linear-gradient(180deg,#090e1c 0%, #0b1226 100%);
+    }
+    .wrap{max-width:1180px;margin:0 auto;padding:32px 20px 62px}
+
+    .hero{
+      background:linear-gradient(140deg,#101833cc,#1d2e5acc);
+      border:1px solid var(--line);
+      border-radius:22px;
+      padding:30px;
+      box-shadow:0 18px 55px #00000050;
+      position:relative;
+      overflow:hidden;
+    }
+    .hero:after{
+      content:"";
+      position:absolute;
+      width:340px;height:340px;
+      right:-110px;top:-120px;
+      background:radial-gradient(circle,var(--accent-2),transparent 62%);
+      opacity:.25;
+      pointer-events:none;
+    }
+
+    .eyebrow{
+      display:inline-block;
+      font-size:12px;
+      letter-spacing:.08em;
+      text-transform:uppercase;
+      color:#bdd0ff;
+      background:#1d284b;
+      border:1px solid #30467d;
+      border-radius:999px;
+      padding:7px 11px;
+      margin-bottom:12px;
+    }
+    h1{
+      font-family:'DM Serif Display',serif;
+      font-size:clamp(32px,4.6vw,52px);
+      line-height:1.05;
+      margin:0 0 10px;
+      font-weight:400;
+    }
+    .subtitle{color:#cbdaff;max-width:900px;margin:0 0 16px;line-height:1.55}
+
+    .quick-links{display:flex;flex-wrap:wrap;gap:10px;margin-top:14px}
+    .btn{
+      display:inline-flex;align-items:center;gap:8px;
+      color:var(--text);text-decoration:none;
+      background:#1b2950;border:1px solid #38508a;
+      padding:10px 14px;border-radius:12px;font-size:14px;font-weight:700;
+      transition:.2s ease;
+    }
+    .btn:hover{transform:translateY(-1px);border-color:#5f84d0;background:#203565}
+
+    .stats{display:flex;gap:10px;flex-wrap:wrap;margin-top:18px}
+    .stat{background:#172447;border:1px solid #2c3e73;color:#d8e5ff;padding:8px 12px;border-radius:999px;font-size:13px}
+
+    h2{margin:34px 0 14px;font-size:25px}
+    .grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(285px,1fr));gap:14px}
+
+    .card{
+      background:linear-gradient(170deg,var(--panel),var(--panel-2));
+      border:1px solid var(--line);
+      border-radius:15px;
+      padding:16px;
+      display:flex;flex-direction:column;gap:11px;
+      min-height:260px;
+    }
+    .card h3{margin:0;font-size:19px;line-height:1.2}
+    .value{font-weight:700;color:#d9e6ff}
+    ul{margin:0;padding-left:18px;color:var(--muted);line-height:1.45}
+
+    .tags{display:flex;flex-wrap:wrap;gap:8px}
+    .tag{font-size:12px;background:#1e2f5e;border:1px solid #355397;color:#c4d8ff;padding:4px 9px;border-radius:999px}
+
+    .links{display:flex;gap:14px;flex-wrap:wrap;margin-top:auto;padding-top:6px}
+    .links a{color:var(--accent);font-weight:700;text-decoration:none;font-size:14px}
+    .links a:hover{text-decoration:underline}
+
+    .about{
+      margin-top:18px;
+      background:linear-gradient(150deg,#101833,#132145);
+      border:1px solid var(--line);
+      border-radius:16px;
+      padding:18px;
+    }
+    .about h3{margin:0 0 10px;font-size:20px}
+    .about ul{columns:2;column-gap:26px}
+    .social{display:flex;gap:12px;flex-wrap:wrap;margin-top:14px}
+    .social a{display:inline-flex;align-items:center;gap:8px;background:#1d2f5f;border:1px solid #355394;color:#e8efff;padding:9px 12px;border-radius:11px;text-decoration:none;font-weight:700}
+    .social a:hover{border-color:#6a91df}
+    .logo{width:16px;height:16px;display:inline-block}
+
+    @media (max-width:760px){
+      .about ul{columns:1}
+    }
   </style>
 </head>
 <body>
   <div class="wrap">
     <section class="hero">
+      <div class="eyebrow">Portfolio Showcase</div>
       <h1>Enterprise Capability Portfolio</h1>
-      <p>Independently developed solution portfolio showcasing reusable patterns for automation, decision intelligence, and AI-enabled engineering workflows. Each solution is designed to be adapted across enterprise contexts.</p>
+      <p class="subtitle">Independently developed solution portfolio focused on practical enterprise reuse. Each solution demonstrates a clear capability, business value, and adaptation potential across different delivery contexts.</p>
+      <div class="quick-links">
+        <a class="btn" href="https://github.com/arvind3?tab=repositories" target="_blank" rel="noopener">View All GitHub Repositories</a>
+      </div>
       <div class="stats">
-        <div class="stat">8 solutions</div>
-        <div class="stat">Multi-perspective storytelling</div>
-        <div class="stat">Public and reusable assets</div>
+        <div class="stat">8 highlighted solutions</div>
+        <div class="stat">Perspective-driven documentation</div>
+        <div class="stat">Live public applications where available</div>
       </div>
     </section>
 
@@ -38,66 +146,137 @@
       <article class="card">
         <h3>AI Explorer</h3>
         <div class="value">Discover and evaluate free AI model options quickly for practical team use.</div>
-        <ul><li>Helps teams shortlist fit-for-purpose LLMs for coding, writing, and business tasks.</li><li>Supports cost-aware experimentation before formal platform standardization.</li></ul>
+        <ul>
+          <li>Helps teams shortlist fit-for-purpose LLMs for coding, writing, and business tasks.</li>
+          <li>Supports cost-aware experimentation before formal platform standardization.</li>
+        </ul>
         <div class="tags"><span class="tag">AI Discovery</span><span class="tag">Cost Optimization</span></div>
-        <a href="https://github.com/arvind3/ai-explorer">Repository</a>
+        <div class="links">
+          <a href="https://github.com/arvind3/ai-explorer" target="_blank" rel="noopener">Repository</a>
+          <a href="https://arvind3.github.io/ai-explorer/docs/" target="_blank" rel="noopener">Perspective Index</a>
+          <a href="https://arvind3.github.io/ai-explorer/" target="_blank" rel="noopener">Live App</a>
+        </div>
       </article>
 
       <article class="card">
         <h3>Retail Decision Intelligence Platform</h3>
         <div class="value">Turn raw operational data into executive-ready insights and actions.</div>
-        <ul><li>Provides KPI visibility for revenue, margins, inventory, and promotion outcomes.</li><li>Enables fast root-cause analysis for performance shifts and trend anomalies.</li></ul>
+        <ul>
+          <li>Provides KPI visibility for revenue, margins, inventory, and promotion outcomes.</li>
+          <li>Enables fast root-cause analysis for performance shifts and trend anomalies.</li>
+        </ul>
         <div class="tags"><span class="tag">Analytics</span><span class="tag">Decision Support</span></div>
-        <a href="https://github.com/arvind3/retail_analytics">Repository</a>
+        <div class="links">
+          <a href="https://github.com/arvind3/retail_analytics" target="_blank" rel="noopener">Repository</a>
+          <a href="https://arvind3.github.io/retail_analytics/docs/perspectives/" target="_blank" rel="noopener">Perspective Index</a>
+          <a href="https://arvind3.github.io/retail_analytics/" target="_blank" rel="noopener">Live App</a>
+        </div>
       </article>
 
       <article class="card">
         <h3>FakerUI</h3>
         <div class="value">Generate realistic test data in-browser to accelerate QA and development cycles.</div>
-        <ul><li>Reduces environment setup friction for teams needing immediate synthetic data.</li><li>Improves test scenario coverage with configurable data generation patterns.</li></ul>
+        <ul>
+          <li>Reduces environment setup friction for teams needing immediate synthetic data.</li>
+          <li>Improves test scenario coverage with configurable data generation patterns.</li>
+        </ul>
         <div class="tags"><span class="tag">Quality Engineering</span><span class="tag">Test Data</span></div>
-        <a href="https://github.com/arvind3/fakerUI">Repository</a>
+        <div class="links">
+          <a href="https://github.com/arvind3/fakerUI" target="_blank" rel="noopener">Repository</a>
+          <a href="https://arvind3.github.io/fakerUI/web/public/perspectives/" target="_blank" rel="noopener">Perspective Index</a>
+          <a href="https://arvind3.github.io/fakerUI/" target="_blank" rel="noopener">Live App</a>
+        </div>
       </article>
 
       <article class="card">
         <h3>Robot Framework Fine-Tune Pipeline</h3>
         <div class="value">Build domain-tuned AI assistance for test automation workflows.</div>
-        <ul><li>Creates curated datasets and fine-tuning pipelines for specialized QA use cases.</li><li>Helps organizations standardize AI-guided test authoring and troubleshooting.</li></ul>
+        <ul>
+          <li>Creates curated datasets and fine-tuning pipelines for specialized QA use cases.</li>
+          <li>Helps organizations standardize AI-guided test authoring and troubleshooting.</li>
+        </ul>
         <div class="tags"><span class="tag">MLOps</span><span class="tag">Test Automation</span></div>
-        <a href="https://github.com/arvind3/robot-finetune-model">Repository</a>
-      </article>
-
-      <article class="card">
-        <h3>RepoLens (Five Lenses)</h3>
-        <div class="value">Analyze repositories through engineering, product, and capability lenses.</div>
-        <ul><li>Speeds stakeholder understanding of technical assets and reuse potential.</li><li>Improves communication between engineering and leadership audiences.</li></ul>
-        <div class="tags"><span class="tag">Portfolio Intelligence</span><span class="tag">Communication</span></div>
-        <a href="https://github.com/arvind3/github-repo-five-lenses">Repository</a>
-      </article>
-
-      <article class="card">
-        <h3>GitHub Different Point of Views</h3>
-        <div class="value">Present one solution to different audiences without duplicating content.</div>
-        <ul><li>Packages the same platform story for executive, product, and engineering conversations.</li><li>Helps teams align faster on value, feasibility, and adoption paths.</li></ul>
-        <div class="tags"><span class="tag">Storytelling</span><span class="tag">Alignment</span></div>
-        <a href="https://github.com/arvind3/github-different-pointofviews">Repository</a>
+        <div class="links">
+          <a href="https://github.com/arvind3/robot-finetune-model" target="_blank" rel="noopener">Repository</a>
+          <a href="https://arvind3.github.io/robot-finetune-model/perspectives/" target="_blank" rel="noopener">Perspective Index</a>
+          <a href="https://arvind3.github.io/robot-finetune-model/" target="_blank" rel="noopener">Live App</a>
+        </div>
       </article>
 
       <article class="card">
         <h3>Playwrite-CLI</h3>
         <div class="value">Automate browser-based tasks and testing from command-line workflows.</div>
-        <ul><li>Enables repeatable validation for web apps and digital processes.</li><li>Supports rapid automation prototyping for operations and QA teams.</li></ul>
+        <ul>
+          <li>Enables repeatable validation for web apps and digital processes.</li>
+          <li>Supports rapid automation prototyping for operations and QA teams.</li>
+        </ul>
         <div class="tags"><span class="tag">Automation</span><span class="tag">CLI Workflows</span></div>
-        <a href="https://github.com/arvind3/Playwrite-CLI">Repository</a>
+        <div class="links">
+          <a href="https://github.com/arvind3/Playwrite-CLI" target="_blank" rel="noopener">Repository</a>
+        </div>
       </article>
 
       <article class="card">
         <h3>Robot Framework IDE</h3>
         <div class="value">Improve productivity for teams building and maintaining test automation suites.</div>
-        <ul><li>Centralizes authoring and execution workflows for Robot Framework users.</li><li>Lowers onboarding time for engineers entering automation-heavy projects.</li></ul>
+        <ul>
+          <li>Centralizes authoring and execution workflows for Robot Framework users.</li>
+          <li>Lowers onboarding time for engineers entering automation-heavy projects.</li>
+        </ul>
         <div class="tags"><span class="tag">Developer Experience</span><span class="tag">Testing</span></div>
-        <a href="https://github.com/arvind3/robot-framework-ide">Repository</a>
+        <div class="links">
+          <a href="https://github.com/arvind3/robot-framework-ide" target="_blank" rel="noopener">Repository</a>
+        </div>
       </article>
+
+      <article class="card">
+        <h3>RobotFrameworkBookWithIDE</h3>
+        <div class="value">Hands-on playbook for scaling test automation skills with practical examples.</div>
+        <ul>
+          <li>Provides structured learning paths and implementation-ready automation patterns.</li>
+          <li>Useful for onboarding engineers into modern Robot Framework practices.</li>
+        </ul>
+        <div class="tags"><span class="tag">Enablement</span><span class="tag">Automation Education</span></div>
+        <div class="links">
+          <a href="https://github.com/arvind3/RobotFrameworkBookWithIDE" target="_blank" rel="noopener">Repository</a>
+        </div>
+      </article>
+
+      <article class="card">
+        <h3>robot-framework-py-skill</h3>
+        <div class="value">Portable Python skill package to accelerate Robot Framework integration workflows.</div>
+        <ul>
+          <li>Enables reusable automation skill patterns across local and CI environments.</li>
+          <li>Supports rapid experimentation with lightweight, modular test automation capabilities.</li>
+        </ul>
+        <div class="tags"><span class="tag">Python</span><span class="tag">Reusable Skills</span></div>
+        <div class="links">
+          <a href="https://github.com/arvind3/robot-framework-py-skill" target="_blank" rel="noopener">Repository</a>
+          <a href="https://arvind3.github.io/robot-framework-py-skill/docs/" target="_blank" rel="noopener">Perspective/Docs</a>
+        </div>
+      </article>
+    </section>
+
+    <h2>About Me</h2>
+    <section class="about">
+      <h3>Professional Profile</h3>
+      <ul>
+        <li>Fellow, Perplexity</li>
+        <li>Fellow, The Institution of Electronics and Telecommunication Engineers (IETE)</li>
+        <li>Senior Member, Institute of Electrical and Electronics Engineers (IEEE)</li>
+        <li>Master's in Computer Applications</li>
+        <li>Master of Business Administration (MBA)</li>
+      </ul>
+      <div class="social">
+        <a href="https://www.linkedin.com/in/arvindkumarbhardwaj/" target="_blank" rel="noopener">
+          <svg class="logo" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true"><path d="M4.98 3.5C4.98 4.88 3.86 6 2.48 6S0 4.88 0 3.5 1.12 1 2.5 1s2.48 1.12 2.48 2.5zM.5 8h4V24h-4V8zm7 0h3.8v2.2h.1c.53-1 1.84-2.2 3.8-2.2 4.06 0 4.8 2.67 4.8 6.15V24h-4v-7.6c0-1.8-.03-4.12-2.5-4.12-2.5 0-2.9 1.95-2.9 4v7.72h-4V8z"/></svg>
+          LinkedIn
+        </a>
+        <a href="https://github.com/arvind3" target="_blank" rel="noopener">
+          <svg class="logo" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true"><path d="M12 .5C5.65.5.5 5.68.5 12.08c0 5.12 3.29 9.46 7.86 10.99.58.1.79-.25.79-.56v-1.97c-3.2.7-3.88-1.56-3.88-1.56-.52-1.34-1.28-1.7-1.28-1.7-1.04-.72.08-.7.08-.7 1.15.08 1.76 1.2 1.76 1.2 1.02 1.77 2.67 1.25 3.32.96.1-.75.4-1.25.73-1.54-2.55-.29-5.24-1.29-5.24-5.74 0-1.27.45-2.3 1.18-3.12-.12-.29-.51-1.47.11-3.06 0 0 .97-.31 3.17 1.19a10.8 10.8 0 0 1 5.78 0c2.2-1.5 3.16-1.19 3.16-1.19.63 1.59.24 2.77.12 3.06.73.82 1.18 1.85 1.18 3.12 0 4.46-2.7 5.44-5.27 5.73.41.36.78 1.06.78 2.14v3.17c0 .31.2.67.8.56a11.6 11.6 0 0 0 7.84-11C23.5 5.68 18.35.5 12 .5z"/></svg>
+          GitHub
+        </a>
+      </div>
     </section>
   </div>
 </body>
