Update portfolio cards, links, and profile section per feedback

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
       padding:18px;
     }
     .about h3{margin:0 0 10px;font-size:20px}
-    .about ul{columns:2;column-gap:26px}
+    .about ul{columns:1;column-gap:26px}
     .social{display:flex;gap:12px;flex-wrap:wrap;margin-top:14px}
     .social a{display:inline-flex;align-items:center;gap:8px;background:#1d2f5f;border:1px solid #355394;color:#e8efff;padding:9px 12px;border-radius:11px;text-decoration:none;font-weight:700}
     .social a:hover{border-color:#6a91df}
@@ -199,20 +199,21 @@
         <div class="links">
           <a href="https://github.com/arvind3/robot-finetune-model" target="_blank" rel="noopener">Repository</a>
           <a href="https://arvind3.github.io/robot-finetune-model/perspectives/" target="_blank" rel="noopener">Perspective Index</a>
-          <a href="https://arvind3.github.io/robot-finetune-model/" target="_blank" rel="noopener">Live App</a>
+          <a href="https://huggingface.co/arvind3/robotframework-expert-qwen2.5-3b-lora" target="_blank" rel="noopener">Model Card (Hugging Face)</a>
         </div>
       </article>
 
       <article class="card">
-        <h3>Playwrite-CLI</h3>
-        <div class="value">Automate browser-based tasks and testing from command-line workflows.</div>
+        <h3>PlaywriteClikBookWithIDE</h3>
+        <div class="value">Interactive Playwright learning book with practical automation examples and IDE-driven workflows.</div>
         <ul>
-          <li>Enables repeatable validation for web apps and digital processes.</li>
-          <li>Supports rapid automation prototyping for operations and QA teams.</li>
+          <li>Helps teams build browser automation capability through structured, hands-on chapters.</li>
+          <li>Accelerates onboarding for engineers adopting Playwright-based testing and automation.</li>
         </ul>
-        <div class="tags"><span class="tag">Automation</span><span class="tag">CLI Workflows</span></div>
+        <div class="tags"><span class="tag">Enablement</span><span class="tag">Browser Automation</span></div>
         <div class="links">
-          <a href="https://github.com/arvind3/Playwrite-CLI" target="_blank" rel="noopener">Repository</a>
+          <a href="https://github.com/arvind3/PlaywriteClikBookWithIDE" target="_blank" rel="noopener">Repository</a>
+          <a href="https://arvind3.github.io/PlaywriteClikBookWithIDE/" target="_blank" rel="noopener">Live Book</a>
         </div>
       </article>
 
@@ -226,6 +227,7 @@
         <div class="tags"><span class="tag">Developer Experience</span><span class="tag">Testing</span></div>
         <div class="links">
           <a href="https://github.com/arvind3/robot-framework-ide" target="_blank" rel="noopener">Repository</a>
+          <a href="https://arvind3.github.io/robot-framework-ide/" target="_blank" rel="noopener">Live App</a>
         </div>
       </article>
 
@@ -252,7 +254,7 @@
         <div class="tags"><span class="tag">Python</span><span class="tag">Reusable Skills</span></div>
         <div class="links">
           <a href="https://github.com/arvind3/robot-framework-py-skill" target="_blank" rel="noopener">Repository</a>
-          <a href="https://arvind3.github.io/robot-framework-py-skill/docs/" target="_blank" rel="noopener">Perspective/Docs</a>
+          <a href="https://arvind3.github.io/robot-framework-py-skill/docs/engineering-blog.html" target="_blank" rel="noopener">Perspective/Docs</a>
         </div>
       </article>
     </section>
@@ -264,7 +266,7 @@
         <li>Fellow, Perplexity</li>
         <li>Fellow, The Institution of Electronics and Telecommunication Engineers (IETE)</li>
         <li>Senior Member, Institute of Electrical and Electronics Engineers (IEEE)</li>
-        <li>Master's in Computer Applications</li>
+        <li>Masters in cmputer</li>
         <li>Master of Business Administration (MBA)</li>
       </ul>
       <div class="social">
