Fix RobotFrameworkBook live link and robot-framework-py-skill perspective URL

--- a/index.html
+++ b/index.html
@@ -241,6 +241,7 @@
         <div class="tags"><span class="tag">Enablement</span><span class="tag">Automation Education</span></div>
         <div class="links">
           <a href="https://github.com/arvind3/RobotFrameworkBookWithIDE" target="_blank" rel="noopener">Repository</a>
+          <a href="https://arvind3.github.io/RobotFrameworkBookWithIDE/" target="_blank" rel="noopener">Live Book</a>
         </div>
       </article>
 
@@ -254,7 +255,7 @@
         <div class="tags"><span class="tag">Python</span><span class="tag">Reusable Skills</span></div>
         <div class="links">
           <a href="https://github.com/arvind3/robot-framework-py-skill" target="_blank" rel="noopener">Repository</a>
-          <a href="https://arvind3.github.io/robot-framework-py-skill/docs/engineering-blog.html" target="_blank" rel="noopener">Perspective/Docs</a>
+          <a href="https://arvind3.github.io/robot-framework-py-skill/engineering-blog.html" target="_blank" rel="noopener">Perspective/Docs</a>
         </div>
       </article>
     </section>
