Rewrite technical card titles into stakeholder-friendly business language

--- a/index.html
+++ b/index.html
@@ -189,8 +189,8 @@
       </article>
 
       <article class="card">
-        <h3>Robot Framework Fine-Tune Pipeline</h3>
-        <div class="value">Build domain-tuned AI assistance for test automation workflows.</div>
+        <h3>AI Quality Engineering Accelerator</h3>
+        <div class="value">Create domain-tuned AI capability to improve test automation quality and speed.</div>
         <ul>
           <li>Creates curated datasets and fine-tuning pipelines for specialized QA use cases.</li>
           <li>Helps organizations standardize AI-guided test authoring and troubleshooting.</li>
@@ -204,8 +204,8 @@
       </article>
 
       <article class="card">
-        <h3>PlaywriteClikBookWithIDE</h3>
-        <div class="value">Interactive Playwright learning book with practical automation examples and IDE-driven workflows.</div>
+        <h3>Browser Automation Capability Academy</h3>
+        <div class="value">A structured learning platform to rapidly build enterprise browser automation skills.</div>
         <ul>
           <li>Helps teams build browser automation capability through structured, hands-on chapters.</li>
           <li>Accelerates onboarding for engineers adopting Playwright-based testing and automation.</li>
@@ -232,8 +232,8 @@
       </article>
 
       <article class="card">
-        <h3>RobotFrameworkBookWithIDE</h3>
-        <div class="value">Hands-on playbook for scaling test automation skills with practical examples.</div>
+        <h3>Enterprise Test Automation Playbook</h3>
+        <div class="value">A practical enablement framework for scaling test automation maturity across teams.</div>
         <ul>
           <li>Provides structured learning paths and implementation-ready automation patterns.</li>
           <li>Useful for onboarding engineers into modern Robot Framework practices.</li>
@@ -246,8 +246,8 @@
       </article>
 
       <article class="card">
-        <h3>robot-framework-py-skill</h3>
-        <div class="value">Portable Python skill package to accelerate Robot Framework integration workflows.</div>
+        <h3>Reusable Test Automation Skills Framework</h3>
+        <div class="value">A modular skill framework to standardize and accelerate Python-based test automation delivery.</div>
         <ul>
           <li>Enables reusable automation skill patterns across local and CI environments.</li>
           <li>Supports rapid experimentation with lightweight, modular test automation capabilities.</li>
