Refine book cards with accurate naming and in-browser execution value

--- a/index.html
+++ b/index.html
@@ -204,11 +204,11 @@
       </article>
 
       <article class="card">
-        <h3>Browser Automation Capability Academy</h3>
-        <div class="value">A structured learning platform to rapidly build enterprise browser automation skills.</div>
+        <h3>Playwright CLI Book with Interactive IDE</h3>
+        <div class="value">Learn browser automation directly in the browser with instant, device-agnostic execution.</div>
         <ul>
-          <li>Helps teams build browser automation capability through structured, hands-on chapters.</li>
-          <li>Accelerates onboarding for engineers adopting Playwright-based testing and automation.</li>
+          <li>In-browser execution removes local setup delays and makes onboarding immediate.</li>
+          <li>Built-in interactive IDE lets users edit, run, and learn from live examples in real time.</li>
         </ul>
         <div class="tags"><span class="tag">Enablement</span><span class="tag">Browser Automation</span></div>
         <div class="links">
@@ -232,11 +232,11 @@
       </article>
 
       <article class="card">
-        <h3>Enterprise Test Automation Playbook</h3>
-        <div class="value">A practical enablement framework for scaling test automation maturity across teams.</div>
+        <h3>Robot Framework Book with Interactive IDE</h3>
+        <div class="value">Learn Robot Framework in-browser with live execution and zero-machine setup friction.</div>
         <ul>
-          <li>Provides structured learning paths and implementation-ready automation patterns.</li>
-          <li>Useful for onboarding engineers into modern Robot Framework practices.</li>
+          <li>In-browser execution enables learning and practice on any device without local environment setup.</li>
+          <li>Interactive IDE with live content supports faster onboarding and hands-on skill development.</li>
         </ul>
         <div class="tags"><span class="tag">Enablement</span><span class="tag">Automation Education</span></div>
         <div class="links">
