Simplify agentic skills card language and positioning

--- a/index.html
+++ b/index.html
@@ -246,16 +246,16 @@
       </article>
 
       <article class="card">
-        <h3>Reusable Test Automation Skills Framework</h3>
-        <div class="value">A modular skill framework to standardize and accelerate Python-based test automation delivery.</div>
+        <h3>Reusable Test Automation Skills</h3>
+        <div class="value">Agentic skill package for Robot Framework workflows, built for practical adoption and fast reuse.</div>
         <ul>
-          <li>Enables reusable automation skill patterns across local and CI environments.</li>
-          <li>Supports rapid experimentation with lightweight, modular test automation capabilities.</li>
+          <li>Uses the Skills.md pattern widely adopted in the open-source agent ecosystem.</li>
+          <li>Keeps onboarding simple: install, run, and adapt quickly for real automation use cases.</li>
         </ul>
-        <div class="tags"><span class="tag">Python</span><span class="tag">Reusable Skills</span></div>
+        <div class="tags"><span class="tag">Agentic Skills</span><span class="tag">Robot Framework</span></div>
         <div class="links">
           <a href="https://github.com/arvind3/robot-framework-py-skill" target="_blank" rel="noopener">Repository</a>
-          <a href="https://arvind3.github.io/robot-framework-py-skill/engineering-blog.html" target="_blank" rel="noopener">Perspective/Docs</a>
+          <a href="https://arvind3.github.io/robot-framework-py-skill/" target="_blank" rel="noopener">Live App/Docs</a>
         </div>
       </article>
     </section>
