Refine Robot Framework IDE card with in-browser LLM/WebAssembly positioning

--- a/index.html
+++ b/index.html
@@ -219,12 +219,12 @@
 
       <article class="card">
         <h3>Robot Framework IDE</h3>
-        <div class="value">Improve productivity for teams building and maintaining test automation suites.</div>
+        <div class="value">VS Code-like Robot Framework IDE in the browser, with in-memory LLM assistance powered by WebAssembly.</div>
         <ul>
-          <li>Centralizes authoring and execution workflows for Robot Framework users.</li>
-          <li>Lowers onboarding time for engineers entering automation-heavy projects.</li>
+          <li>Run, edit, and validate tests directly in-browser with zero local machine setup.</li>
+          <li>AI-assisted authoring experience helps teams learn faster and ship automation sooner.</li>
         </ul>
-        <div class="tags"><span class="tag">Developer Experience</span><span class="tag">Testing</span></div>
+        <div class="tags"><span class="tag">In-Browser IDE</span><span class="tag">LLM + WebAssembly</span></div>
         <div class="links">
           <a href="https://github.com/arvind3/robot-framework-ide" target="_blank" rel="noopener">Repository</a>
           <a href="https://arvind3.github.io/robot-framework-ide/" target="_blank" rel="noopener">Live App</a>
