Fix spelling: Masters in Computer

--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
         <li>Fellow, Perplexity</li>
         <li>Fellow, The Institution of Electronics and Telecommunication Engineers (IETE)</li>
         <li>Senior Member, Institute of Electrical and Electronics Engineers (IEEE)</li>
-        <li>Masters in cmputer</li>
+        <li>Masters in Computer</li>
         <li>Master of Business Administration (MBA)</li>
       </ul>
       <div class="social">
