--- a/index.html
+++ b/index.html
@@ -135,9 +135,21 @@
     .about{margin-top:18px;padding:20px 18px}
     .about h3{margin:0 0 10px;font-size:22px}
     .about ul{columns:1;list-style:none;padding:0;margin:0;display:grid;gap:10px}
-    .org-link{display:flex;align-items:center;gap:10px;text-decoration:none;color:#e8f1ff;font-weight:500}
+    .org-link{display:flex;align-items:center;gap:12px;text-decoration:none;color:#e8f1ff;font-weight:500;line-height:1.25}
     .org-link:hover{color:#9de8ff}
-    .org-logo{width:26px;height:26px;border-radius:8px;display:inline-flex;align-items:center;justify-content:center;background:#ffffff14;border:1px solid #ffffff2f;font-size:12px;font-weight:700}
+    .org-logo{
+      width:30px;height:30px;min-width:30px;
+      border-radius:9px;
+      display:inline-flex;align-items:center;justify-content:center;
+      background:linear-gradient(180deg,#ffffff22,#ffffff10);
+      border:1px solid #ffffff42;
+      box-shadow:inset 0 1px 0 #ffffff55, 0 6px 14px #00000040;
+      font-size:11px;font-weight:800;letter-spacing:.02em;color:#e9f6ff;
+    }
+    .org-logo.perplexity{background:linear-gradient(180deg,#18c6d655,#0f6f8f55)}
+    .org-logo.iete{background:linear-gradient(180deg,#6f84ff55,#394fa855)}
+    .org-logo.ieee{font-size:9px;letter-spacing:.08em;padding-left:1px}
+    .org-logo.iaeng{background:linear-gradient(180deg,#54c2ff55,#2f5fbd55)}
 
     .social{display:flex;gap:10px;flex-wrap:wrap;margin-top:14px}
     .social a{
@@ -294,10 +306,10 @@
     <section class="about glass">
       <h3>Professional Profile</h3>
       <ul>
-        <li><a class="org-link" href="https://www.perplexity.ai" target="_blank" rel="noopener"><span class="org-logo">P</span> Fellow, Perplexity</a></li>
-        <li><a class="org-link" href="https://www.iete.org" target="_blank" rel="noopener"><span class="org-logo">I</span> Fellow, The Institution of Electronics and Telecommunication Engineers (IETE)</a></li>
-        <li><a class="org-link" href="https://www.ieee.org" target="_blank" rel="noopener"><span class="org-logo">IEEE</span> Senior Member, Institute of Electrical and Electronics Engineers (IEEE)</a></li>
-        <li><a class="org-link" href="https://www.iaeng.org" target="_blank" rel="noopener"><span class="org-logo">IA</span> Member, International Association of Engineering (IAENG)</a></li>
+        <li><a class="org-link" href="https://www.perplexity.ai" target="_blank" rel="noopener"><span class="org-logo perplexity">PX</span> Fellow, Perplexity</a></li>
+        <li><a class="org-link" href="https://www.iete.org" target="_blank" rel="noopener"><span class="org-logo iete">IETE</span> Fellow, The Institution of Electronics and Telecommunication Engineers (IETE)</a></li>
+        <li><a class="org-link" href="https://www.ieee.org" target="_blank" rel="noopener"><span class="org-logo ieee">IEEE</span> Senior Member, Institute of Electrical and Electronics Engineers (IEEE)</a></li>
+        <li><a class="org-link" href="https://www.iaeng.org" target="_blank" rel="noopener"><span class="org-logo iaeng">IA</span> Member, International Association of Engineering (IAENG)</a></li>
       </ul>
       <div class="social">
         <a href="https://www.linkedin.com/in/arvindkumarbhardwaj/" target="_blank" rel="noopener">
